--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <img src="img/NeuroStartUpIcon.png" width="31" height="31" class="d-inline-block align-top" alt="">
                     NeuroStartUp
                 </a>
+                //todo
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -54,6 +55,7 @@
                             <div class="card-body">
                                 <p class="text-center">Оставьте ваши контакты и мы свяжемся с вами сегодня!</p>
                                 <form>
+                                    //commit
                                     <p class="invisible">
                                         Ваши координаты: <span id="user-coords"></span>
                                     </p>
